[tool.taskipy.tasks]
test = "python -m pytest tests"


[tool.poetry]
name = "shap-clustering"
version = "0.1.0"
description = ""
authors = ["Rafael Dias <rafaelagd@gmail.com>"]
readme = "README.md"
packages = [{include = "shap_clustering"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.4.3"
numpy = "<1.63.0"
scipy = "^1.8.1"
scikit-learn = "^1.1.1"
click = "^8.1.3"
numba = "^0.55.2"
fasttreeshap = "^0.1.2"
shap = "^0.41.0"
xgboost = "^1.6.1"
matplotlib = "^3.5.2"
pip-licenses = "^3.5.4"
feature-engine = "^1.4.1"
optuna = "^2.10.1"
catboost = "^1.0.6"
imblearn = "^0.0"
lightgbm = "^3.3.2"
category-encoders = "^2.5.0"
xgbse = "^0.2.3"
pycox = "^0.2.3"
lohrasb = "^3.1.0"
python-dotenv = "^0.21.0"
prompt-toolkit = "^3.0.37"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
mypy = "^1.2.0"
types-requests = "^2.28.11.17"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
