[tool.poetry]
name = "shap-clustering"
version = "0.1.0"
description = ""
authors = ["Rafael Dias <rafaelagd@gmail.com>"]
readme = "README.md"
packages = [{include = "shap_clustering"}]

[tool.poetry.dependencies]
python = "3.8.16"
numpy = "^1.24.2"
scikit-learn = "^1.2.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
